# playful

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  license.txt  package.xml  playful  setup.py
mac/: playful_macos
playful/api/: api.py
playful/component/: component.py  inhibition.py  memory_getter.py  property.py  resources_manager.py  spineable.py
playful/display/: display.py
playful/engine/: run.py
playful/interpreter/: args.py  directory.py  evaluation.py  instantiable.py  interpreter.py  lib.py  parsing.py  preprocessed_calculator.py  preprocessed_word.py  score_calculator.py  state_transition.py  subevaluation.py  vocabulary.py  word.py  workspace.py
playful/memory/: memory.py
playful/orchestration/: behavior_container.py  evaluable.py  resource_management.py  scoreable.py  state_container.py  statement.py  transitable.py
playful/resources/: resources.py
playful/terminal/: playful  terminal.py
tests/: test_playful.py  tests.py
tests/test_projects/py/: tests_play.py
tests/test_projects/test_args_node/play/: program.play
tests/test_projects/test_circular_test_machine/config/: globals.py
tests/test_projects/test_circular_test_machine/play/: program.play
tests/test_projects/test_conditional/play/: program.play
tests/test_projects/test_dynamic_priority/config/: globals.py
tests/test_projects/test_dynamic_priority/play/: program.play
tests/test_projects/test_dynamic_priority_2/play/: program.play
tests/test_projects/test_exception/play/: program.play
tests/test_projects/test_higher_conditional/play/: program.play
(+11 files in other folders)
