<?xml version="1.0"?>
<package>

  <name>playful</name>

  <version>1.0.0</version>
  <description>playful executable</description>
  <license>free of charge exclusively to non-profit organization for use on non-profit projects</license>

  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>

</package>
